# c-dev-container

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  GITHUB_ACTIONS_GUIDE.md  LICENSE  README.md  VALGRIND_GUIDE.md
.devcontainer/: Dockerfile  GIT_SETUP.md  devcontainer.json  setup-git.sh
.github/workflows/: ci.yml
src/: main.c
